--- a/src/scss/responsive/_responsive.scss
+++ b/src/scss/responsive/_responsive.scss
@@ -44,8 +44,12 @@
     
 
 }
-@media only screen and (min-width: 1200px) and (max-width: 1365px) { 
-
+@media only screen and (min-width: 992px) and (max-width: 1200px) { 
+    .blog__box.blogList.blogListSmall {
+        .blog__poster {
+            width: 120px;
+        }
+    }
 }   
 @media only screen and (max-width: 1200px) {
     .contact-section {
@@ -56,9 +60,9 @@
     
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) { 
-    .blog__box.blogList .blog__poster {
-        width: 110px;
-    }
+    // .blog__box.blogList .blog__poster {
+    //     width: 110px;
+    // }
 }
 @media only screen and (max-width: 1100px) { 
     .service-better {
@@ -120,6 +124,9 @@
     }
     .header {
         padding: 10px 0;
+    }
+    .slider {
+        padding: 200px 0;
     }
     .contact-section {
         padding: 120px 0;
@@ -222,6 +229,13 @@
             }
         }
     }
+    .blog__box.blogList {
+        &.blogListBig {
+            .blog__content {
+                padding-right: 70px;
+            }
+        }
+    }
     
 }
 /* Tablet Landscape */
@@ -236,6 +250,9 @@
 
 /* All Mobile Sizes */
 @media only screen and (max-width: 767px) {
+    .slider {
+        padding: 150px 0;
+    }
     .widget__info-company {
         padding-right: 40px;
     }
@@ -255,6 +272,16 @@
             padding-right: 0;
         }
     }
+    .blog__box.blogList {
+        &.blogListBig {
+            .blog__poster {
+                width: 250px;
+            }
+            .blog__content {
+                padding-right: 0;
+            }
+        }
+    }
 }
 @media only screen and (max-width: 749px) { 
     
@@ -268,7 +295,18 @@
     
 }
 @media only screen and (max-width: 600px) {
-
+    .blog__box.blogList {
+        &.blogListBig {
+            .blog__poster {
+                width: 180px;
+            }
+            .blog__content {
+                .blog__description {
+                    display: none;
+                }
+            }
+        }
+    }
 }
 @media only screen and (max-width: 575px) {
     .topbar {
@@ -325,15 +363,18 @@
 @media only screen and (max-width: 479px) {
     
 }
-@media (max-width: 459px) {
-    
+@media (max-width: 475px) {
+    .blog__box.blogList {
+        &.blogListBig {
+            .blog__poster {
+                width: 150px;
+            }
+        }
+    }
 }
 @media (max-width: 425px) {
     .header__search input {
         min-width: 0;
-    }
-    .blog__box.blogList .blog__poster {
-        width: 120px;
     }
 }
 @media (max-width: 400px) {
@@ -353,6 +394,27 @@
             }
         }
     }
+    .blog__box.blogList {
+        &.blogListSmall {
+            .blog__poster {
+                width: 120px;
+                // margin-right: 0;
+                // float: unset;
+                // margin-bottom: 15px;
+            }
+        }
+    }
+    .blog__box.blogList {
+        &.blogListBig {
+            .blog__poster {
+                width: 120px;
+                // margin-right: 0;
+                // float: unset;
+                // margin-bottom: 15px;
+            }
+        }
+    }
+
 }
 
 @media (max-width: 320px) { 
